# Cafe_OMS_FastAPI_v1

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_08_2239-1ffbd86be697_create_all_tables.py
dump/: _dependencies.py  order_items.py
dump/order_items/: dependencies.py  schemas.py  views.py
src/: .env.template  alembic.ini  database.py  main.py
src/actions/: create_associations.py  create_full_orders.py  create_menu_items.py  create_orders.py  create_perm_to_role_associations.py  create_permissions.py  create_role_to_user_associations.py  create_roles.py  create_superuser.py  create_testusers.py
src/alembic/: env.py
src/api/: __init__.py  dependencies.py
src/api/dependencies/: backend.py  strategy.py  user_manager.py  users.py
src/api/v1/: __init__.py  auth.py  fastapi_users_router.py  users.py
src/api_v1/: __init__.py
src/api_v1/menu_items/: crud.py  dependencies.py  views.py
src/api_v1/order_items/: crud.py
src/api_v1/order_menu_association/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/orders/: crud.py  dependencies.py  schemas.py  views.py
src/core/: config.py  dependencies.py
src/core/authentification/: dependencies.py  transport.py  user_manager.py
src/core/cruds/: dependencies.py  (+6 more)
src/menu_items/: crud.py  schemas.py  views.py
src/orders/: views.py
src/web/: __init__.py
tests/: conftest.py  test_cruds.py  test_cruds_associations.py  test_cruds_menu_items.py  test_cruds_orders.py  test_endpoints_api_associations.py  test_endpoints_api_menu_items.py  test_endpoints_api_orders.py
(+43 files in other folders)
